--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -112,14 +113,16 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
-            <h2 class="mt-0">Rates!</h2>
-            <hr class="divider my-4">
+              <h2 class="mt-0">Getting in touch</h2>
+              <hr class="divider my-6">            
+            <h4 class="mt-0">Rates</h4>
+            <hr class="divider my-6">
             <p class="text-muted mb-5">
               Free 30 minute consultation<br>
               $80 per session
             </p>
-            <h2 class="mt-0">Contact stuff!</h2>
-            <hr class="divider my-4">
+            <h4 class="mt-0">Contact Info</h4>
+            <hr class="divider my-6">
             <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
           </div>
         </div>
