--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">
-            Authentic Expression Counseling<br>
-            Art Therapy
+            Authentic Expression Counseling
           </h1>
+          <h2 class="text-white font-weight-bold">
+            Art Therapy
+          </h2>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Home info</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <p class="text-white-75 font-weight-light mb-5">Hi I'm Elise and I'm amazing!!</p>
+          <!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>-->
         </div>
       </div>
     </div>
@@ -73,35 +75,35 @@
   <!-- Services Section -->
   <section class="page-section" id="services">
     <div class="container">
-      <h2 class="text-center mt-0">Approach</h2>
+      <h2 class="text-center mt-0">Therapeutic Approach</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Sturdy Themes</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <h3 class="h4 mb-2">Approach 1</h3>
+            <p class="text-muted mb-0">Lalalala!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-star text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Up to Date</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+            <h3 class="h4 mb-2">Approach 2</h3>
+            <p class="text-muted mb-0">Lalalala!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <h3 class="h4 mb-2">Approach 3</h3>
+            <p class="text-muted mb-0">Lalalala!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <h3 class="h4 mb-2">Approach 4</h3>
+            <p class="text-muted mb-0">Lalalala!</p>
           </div>
         </div>
       </div>
@@ -109,46 +111,50 @@
   </section>
 
     <!-- Contact Section -->
-    <section class="page-section" id="contact">
+    <section class="page-section bg-primary" id="contact">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
-              <h2 class="mt-0">Getting in touch</h2>
+              <h2 class="mt-0 text-white">Getting in touch</h2>
               <hr class="divider my-6">            
-            <h4 class="mt-0">Rates</h4>
+            <h4 class="mt-0 text-white">Rates</h4>
             <hr class="divider my-6">
-            <p class="text-muted mb-5">
+            <p class="text-white mb-5">
               Free 30 minute consultation<br>
               $80 per session
             </p>
-            <h4 class="mt-0">Contact Info</h4>
+            <h4 class="mt-0 text-white">Contact Info</h4>
             <hr class="divider my-6">
-            <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-            <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-            <div>+1 (202) 555-0149</div>
+          <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0 text-white">
+            <i class="fas fa-phone fa-3x mb-3 text-white"></i>
+            <div>(303) 532-5646</div>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+          <div class="col-lg-4 mr-auto text-center text-white">
+            <i class="fas fa-envelope fa-3x mb-3 text-white"></i>
             <!-- Make sure to change the email address in anchor text AND the link below! -->
-            <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+            <a class="d-block text-white" href="mailto:AuthenticExpressionCounseling@gmail.com">AuthenticExpressionCounseling@gmail.com</a>
           </div>
+          <div class="col-lg-4 mr-auto text-center text-white">
+              <i class="fas fa-home fa-3x mb-3 text-white"></i>
+              <!-- Make sure to change the email address in anchor text AND the link below! -->
+              <div>500 9th Ave #2<br>Longmont, CO</div>
+            </div>
         </div>
       </div>
     </section>
 
   <!-- About Section -->
-  <section class="page-section bg-primary" id="about">
+  <section class="page-section" id="about">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">About</h2>
+          <h2 class="mt-0">About Elise</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <img src="/img/headshot.jpg" width="200">
+          <p class="text-muted-50 mb-4">Good stuff about how smart & wonderful Elise is here</p>
         </div>
       </div>
     </div>
@@ -157,9 +163,7 @@
 
   <!-- Footer -->
   <footer class="bg-light py-5">
-    <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
-    </div>
+    <div class="container"></div>
   </footer>
 
   <!-- Bootstrap core JavaScript -->
