--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Approach</a>
+            <a class="nav-link js-scroll-trigger" href="#approach">Approach</a>
           </li>          
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -72,8 +72,8 @@
     </div>
   </header>
 
-  <!-- Services Section -->
-  <section class="page-section" id="services">
+  <!-- Approach Section -->
+  <section class="page-section" id="approach">
     <div class="container">
       <h2 class="text-center mt-0">Therapeutic Approach</h2>
       <hr class="divider my-4">
@@ -128,7 +128,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0 text-white">
+          <div class="col-lg-4 ml-auto text-center text-white">
             <i class="fas fa-phone fa-3x mb-3 text-white"></i>
             <div>(303) 532-5646</div>
           </div>
@@ -153,7 +153,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">About Elise</h2>
           <hr class="divider light my-4">
-          <img src="/img/headshot.jpg" width="200">
+          <img src="/img/headshot.jpg" width="400">
           <p class="text-muted-50 mb-4">Good stuff about how smart & wonderful Elise is here</p>
         </div>
       </div>
