--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#approach">Approach</a>
-          </li>          
+            <a class="nav-link js-scroll-trigger" href="#approach">Therapeutic Approach</a>
+          </li>     
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About Elise</a>
+          </li>               
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>          
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -56,7 +56,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">
+          <!--<h1 class="text-uppercase text-white font-weight-bold">
             Authentic Expression Counseling
           </h1>
           <h2 class="text-white font-weight-bold">
@@ -66,8 +66,8 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">Hi I'm Elise and I'm amazing!!</p>
-          <!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>-->
-        </div>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        </div>-->
       </div>
     </div>
   </header>
@@ -75,8 +75,8 @@
   <!-- Approach Section -->
   <section class="page-section" id="approach">
     <div class="container">
-      <h2 class="text-center mt-0">Therapeutic Approach</h2>
-      <hr class="divider my-4">
+      <h2 class="text-center mt-0">My Therapeutic Approach</h2>
+      <!--<hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
@@ -106,60 +106,83 @@
             <p class="text-muted mb-0">Lalalala!</p>
           </div>
         </div>
-      </div>
+      </div>-->
+      <center>
+      Finding a therapist is not always easy, but it is an important step in a journey towards healing. We live in a world where there is a tendency to praise each other for accomplishing things without help, but when it comes to mental health no one should have to feel alone. As an art therapist, I provide the opportunity to work with art as a form of expression, which can deepen the therapeutic process beyond that of just talk-therapy.
+      <br><br>You do not have to have any background in art, experience using art materials, or even consider yourself "artistic" in order to do art therapy.
+      <br><br>
+      Art therapy is especially successful for clients suffering from anxiety, depression, trauma, and substance abuse. Although art therapy is for all ages and populations, in my work I specialize with adults and teens.
+      </center><br>
+      <!--<h4>Types of therapy:</h4>
+      Art Therapy<br>
+      Attachment-based<br>
+      Cognitive Behavioral (CBT)<br>
+      Transpersonal<br>-->
     </div>
   </section>
 
-    <!-- Contact Section -->
-    <section class="page-section bg-primary" id="contact">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8 text-center">
-              <h2 class="mt-0 text-white">Getting in touch</h2>
-              <hr class="divider my-6">            
-            <h4 class="mt-0 text-white">Rates</h4>
-            <hr class="divider my-6">
-            <p class="text-white mb-5">
-              Free 30 minute consultation<br>
-              $80 per session
-            </p>
-            <h4 class="mt-0 text-white">Contact Info</h4>
-            <hr class="divider my-6">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center text-white">
-            <i class="fas fa-phone fa-3x mb-3 text-white"></i>
-            <div>(303) 532-5646</div>
-          </div>
-          <div class="col-lg-4 mr-auto text-center text-white">
-            <i class="fas fa-envelope fa-3x mb-3 text-white"></i>
-            <!-- Make sure to change the email address in anchor text AND the link below! -->
-            <a class="d-block text-white" href="mailto:AuthenticExpressionCounseling@gmail.com">AuthenticExpressionCounseling@gmail.com</a>
-          </div>
-          <div class="col-lg-4 mr-auto text-center text-white">
-              <i class="fas fa-home fa-3x mb-3 text-white"></i>
-              <!-- Make sure to change the email address in anchor text AND the link below! -->
-              <div>500 9th Ave #2<br>Longmont, CO</div>
-            </div>
-        </div>
-      </div>
-    </section>
-
   <!-- About Section -->
-  <section class="page-section" id="about">
+  <section class="page-section bg-primary" id="about">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">About Elise</h2>
           <hr class="divider light my-4">
-          <img src="/img/headshot.jpg" width="400">
-          <p class="text-muted-50 mb-4">Good stuff about how smart & wonderful Elise is here</p>
+          <img src="/img/headshot.jpg" width="400"><br><br>
         </div>
       </div>
+      <br>
+      <!--I am...-->
+
+      <h4>Counseling experience:</h4>
+      Art Therapy<br>
+      Attachment-based<br>
+      Cognitive Behavioral (CBT)<br>
+      Transpersonal<br><br>
+
+      <h4>Qualifications:</h4>
+      Masters Degree in Art Therapy<br>
+      Registered Psychotherapist
+      <br><br>
+
+      <h4>Testimonials:</h4>
+      "Elise has a deep understanding of her client’s needs and their process. 
+      She brings vibrant energy into her work, that is both welcoming and supportive. 
+      Most importantly, she has a way of bringing it all to the surface with 
+      integrity and support." -Ellie Kraus, MSW
     </div>
   </section>
 
+      <!-- Contact Section -->
+      <section class="page-section" id="contact">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                <h2 class="mt-0">Getting in Touch</h2>
+              <hr class="divider my-6">
+                Free 30 minute consultation<br>
+                $80 per session
+              <hr class="divider my-6">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 ml-auto text-center">
+              <i class="fas fa-phone fa-3x mb-3"></i>
+              <div>(855) 537-8274</div>
+            </div>
+            <div class="col-lg-4 mr-auto text-center">
+              <i class="fas fa-envelope fa-3x mb-3"></i>
+              <!-- Make sure to change the email address in anchor text AND the link below! -->
+              <a class="d-block" href="mailto:AuthenticExpressionCounseling@gmail.com">AuthenticExpressionCounseling@gmail.com</a>
+            </div>
+            <div class="col-lg-4 mr-auto text-center">
+                <i class="fas fa-home fa-3x mb-3"></i>
+                <!-- Make sure to change the email address in anchor text AND the link below! -->
+                <div>500 9th Ave #2<br>Longmont, CO</div>
+              </div>
+          </div>
+        </div>
+      </section>
 
   <!-- Footer -->
   <footer class="bg-light py-5">
