--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">About Elise</h2>
           <hr class="divider light my-4">
-          <img src="/img/headshot.jpg" width="400"><br><br>
+          <img id="headshot" src="/img/headshot.jpg"><br><br>
         </div>
       </div>
       <br>
