--- a/index.html
+++ b/index.html
@@ -161,14 +161,13 @@
                 <h2 class="mt-0">Getting in Touch</h2>
               <hr class="divider my-6">
                 Free 30 minute consultation<br>
-                $80 per session
-              <hr class="divider my-6">
+                $80 per session<br><br>
             </div>
           </div>
           <div class="row">
             <div class="col-lg-4 ml-auto text-center">
               <i class="fas fa-phone fa-3x mb-3"></i>
-              <div>(855) 537-8274</div>
+              <div>(303) 532-5646</div>
             </div>
             <div class="col-lg-4 mr-auto text-center">
               <i class="fas fa-envelope fa-3x mb-3"></i>
