changed more css

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
   <!-- About Section -->
   <section class="page-section about-container" id="about">
     <div class="container">
-          <center><h2 class="mt-0">About Elise</h2></center>
-          <hr class="divider light my-4">
+          <center><h2 class="mt-0 about-header">About Elise</h2></center>
+          <hr class="divider my-4 about-divider">
       <!--I am...-->
        <div class="column headshot">
         <img id="headshot" class="profile" src="/img/headshot.jpg">
